--- a/week2/readme
+++ b/week2/readme
@@ -1,1 +1,4 @@
 
+md dosyası içinde yazılı ödev vardır.
+kod ödevi için yorumlara bakılarak post get delete işlemlerini postmanden yapabilirsiniz.
+swagger entegre edilmiştir.
